# Fishing_Line_Flyback_Impact_Analysis

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .swp  CONTRIBUTING.md  LICENSE  Makefile  README.md  bandit.yml  codecov.yml  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: constraints.txt  labeler.yml  tests.yml
Fishing_Line_Flyback_Impact_Analysis/: pyproject.toml
Fishing_Line_Flyback_Impact_Analysis/src/Fishing_Line_Flyback_Impact_Analysis/: __init__.py  __main__.py  impulse_analysis.py  visualization.py
Fishing_Line_Flyback_Impact_Analysis/src/Fishing_Line_Flyback_Impact_Analysis/legacy/: __init__.py  kinetic_energy_analysis.py  legacy__main__.py  legacy_visualization.py  windowing.py
Fishing_Line_Flyback_Impact_Analysis/src/Fishing_Line_Flyback_Impact_Analysis/shared/: __init__.py  constants.py  data_processing.py
docs/: index.md  reference.md  requirements.txt  usage.md
docs/reference/: Fishing_Line_Flyback_Impact_Analysis.rst  Fishing_Line_Flyback_Impact_Analysis.shared.rst  modules.rst
impulse_analysis/: flyback_results_table.tex  impulse_analysis_report.txt  impulse_results.csv
src/Fishing_Line_Flyback_Impact_Analysis/: __init__.py  __main__.py  analysis.py  analysis.py.backup  impulse_analysis.py  visualization.py  windowing.py
src/Fishing_Line_Flyback_Impact_Analysis/shared/: .data_processing.py.swp  __init__.py  constants.py  data_processing.py
tests/: __init__.py  conftest.py  run_tests.py  test___init__.py  test_analysis.py  test_gui.py  test_impulse_analysis.py  test_integration.py  test_main.py  test_main_extended_reference.py  test_main_module.py  test_performance.py  test_shared_constants.py  test_shared_data_processing.py  test_utilities_reference.py  test_visualization.py
