[tool.poetry]
name = "Fishing_Line_Flyback_Impact_Analysis"
version = "0.0.0"
description = "A comprehensive Python package for analyzing fishing line flyback impact data from Dewesoft sensor measurements"
authors = ["Nanosystems Lab <fnslab@hawaii.edu>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "Fishing_Line_Flyback_Impact_Analysis", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
scipy = "^1.16.0"
seaborn = "^0.13.2"
matplotlib = "^3.10.3"
pandas = "^2.3.0"
numpy = "^2.3.1"
tables = "^3.10.2"
h5py = "^3.14.0"
click = "^8.2.1"
plotly = "^6.2.0"
cairosvg = "^2.8.2"
pyqt5 = "^5.15.11"
pyqtgraph = "^0.13.7"
pyopengl = "^3.1.9"
pyopengl-accelerate = "^3.1.9"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-argparse = ">=0.4.0"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
pytest-cov = "^6.2.1"

[tool.poetry.scripts]
# Main entry point (long form)
Fishing_Line_Flyback_Impact_Analysis = "Fishing_Line_Flyback_Impact_Analysis.__main__:main"
# Convenient aliases
fishing-line-analysis = "Fishing_Line_Flyback_Impact_Analysis.__main__:main"
fla = "Fishing_Line_Flyback_Impact_Analysis.__main__:main"
impulse = "Fishing_Line_Flyback_Impact_Analysis.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["Fishing_Line_Flyback_Impact_Analysis", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = false
warn_unreachable = false
pretty = true
show_column_numbers = true
show_error_context = true
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
